--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -4,7 +4,8 @@
   <h3 class="light-blue-text text-darken-3 center-align">Add Task</h3>
 
   <div class="row card-panel grey lighten-5">
-      <form class="col s12" method="POST" action="">
+      <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
+          <!-- Task Category -->
           <div class="row">
               <div class="input-field col s12">
                   <i class="fas fa-folder-open prefix light-blue-text text-darken-3"></i>
@@ -17,22 +18,25 @@
                   <label for="category_name">Task Catgeory</label>
               </div>
           </div>
+          <!-- Task Name -->
           <div class="row">
               <div class="input-field col s12">
                   <i class="fas fa-pencil-alt prefix light-blue-text text-darken-3"></i>
-                  <input id="task_name"name="task_name" minlength="5" maxlength="15" 
+                  <input id="task_name"name="task_name" minlength="5" maxlength="25" 
                       type="text" class="validate" required>
                   <label for="task_name">Task Name</label>
               </div>
           </div>
+          <!-- Task Description -->
           <div class="row">
               <div class="input-field col s12">
                   <i class="fas fa-align-left prefix light-blue-text text-darken-3"></i>
                   <textarea id="task_description" name="task_description" minlength="5" 
-                        maxlength="15" class="materialize-textarea" required></textarea>
+                        maxlength="25" class="materialize-textarea" required></textarea>
                   <label for="task_description">Task Description</label>
               </div>
           </div>
+          <!-- Due Date picker-->
           <div class="row">
               <div class="input-field col s12">
                   <i class="fas fa-calendar-alt prefix light-blue-text text-darken-3"></i>
@@ -40,6 +44,7 @@
                   <label for="due_date">Due Date</label>
               </div>
           </div>
+                      <!-- Is Urgent toggle -->
                       <div class="row">
                             <div class="input-field col s12">
                                   <div class="switch">
@@ -52,6 +57,14 @@
                                   </div>
                             </div>
                       </div>
+            <!-- Submit button-->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                        Add Task <i class="fas-fa-plus-square right"></i>
+                    </button>
+                </div>
+            </div>
       </form>
   </div>
 
