--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
-  <h3 class="light-blue-text text-darken-3 center-align">Add Task</h3>
+  <h3 class="light-blue-text text-darken-3 center-align">Edit Task</h3>
 
   <div class="row card-panel grey lighten-5">
-      <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
-          <!--  Category Selection -->
+      <form class="col s12" method="POST" action="{{ url_for('edit_task', task_id=task._id) }}">
+          <!-- Category Selection -->
           <div class="row">
               <div class="input-field col s12">
                   <i class="fas fa-folder-open prefix light-blue-text text-darken-3"></i>
@@ -61,7 +61,7 @@
             <div class="row">
                 <div class="col s12 center-align">
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
-                        Add Task <i class="fas fa-plus-square right"></i>
+                        Edit Task <i class="fas fa-edit right"></i>
                     </button>
                 </div>
             </div>
